# StarcartLocation_RTK_IMU_SoftwareV2_4

./: CMakeLists.txt
MXT906AUpdate/: MXT906A-V300C006B002E21261.img  README  starUpdate906A
auto_test/: auto_test.cpp
doc/: .~lock.ÎÀÐÇ¹ßµ¼×éºÏ¶¨Î»½Ó¿ÚÎÄµµÏêÏ¸ËµÃ÷.docx#  ÎÀÐÇ¹ßµ¼×éºÏ¶¨Î»½Ó¿ÚÎÄµµÏêÏ¸ËµÃ÷.docx
gnss_module/: gnss_module.cpp  makefile
gnss_test/: gnss_test  gnss_test.cpp  gnss_test_k.cpp  makefile
gyro_test/: gyro_test.cpp
gyro_test/lsm/: CMakeLists.txt  LSM6DS3_ACC_GYRO_driver.c  LSM6DS3_ACC_GYRO_driver.h  i2c-util.c  i2c-util.h  sta_lsm6ds3.c  sta_lsm6ds3.h  typedef.h
include/: KFApp.h  PSINS.h  StarLocationData.h  StarLocationFactory.h  StarSerial.h  gnss_module.h  gnss_sins_api.h  gyro_module.h  sinsapi.h
src/: makefile  rtkImu.cpp
